<resources>
    <string name="app_name">PRODAN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="busca_entre_todas_las_opciones_todos_los_animalitos_buscan_un_hogar">Busca entre todas las opciones, todos los animalitos buscan un hogar!</string>
    <string name="next">Next</string>
    <string name="gallery">Gallery</string>
    <string name="un_futuro_hogar">Un Futuro Hogar</string>
    <string name="profile_picture">Profile picture</string>
    <string name="plus">+</string>
    <string name="descripcion">descripcion</string>
    <string name="stringprodanmty">\@prodanmty</string>
    <string name="correo">Correo</string>
    <string name="facebook">Facebook</string>
    <string name="prodanac">ProdanAC</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="informes_prodan_org_mx">informes@prodan.org.mx</string>
    <string name="youtube">Youtube</string>
    <string name="prodanmty">Prodanmty</string>
    <string name="contacto">Contacto</string>
    <string name="aviso_de_privacidad">Aviso de Privacidad</string>
    <string name="imagenprodan">ImagenProdan</string>
    <string name="aceptar">Aceptar</string>
    <string name="prodan_privacy_n_npolicy_prodefensa_animal_a_c_built_the_prodan_app_as_a_free_app_this_service_is_provided_by_prodefensa_animal_a_c_at_no_cost_and_is_intended_for_use_as_is_n_nthis_page_is_used_to_inform_visitors_regarding_my_policies_with_the_collection_use_and_disclosure_of_personal_information_if_anyone_decided_to_use_my_service_n_nif_you_choose_to_use_my_service_then_you_agree_to_the_collection_and_use_of_information_in_relation_to_this_policy_the_personal_information_that_i_collect_is_used_for_providing_and_improving_the_service_i_will_not_use_or_share_your_information_with_anyone_except_as_described_in_this_privacy_policy_n_nthe_terms_used_in_this_privacy_policy_have_the_same_meanings_as_in_our_terms_and_conditions_which_are_accessible_at_prodan_unless_otherwise_defined_in_this_privacy_policy_n_ninformation_collection_and_use_n_nfor_a_better_experience_while_using_our_service_i_may_require_you_to_provide_us_with_certain_personally_identifiable_information_the_information_that_i_request_will_be_retained_on_your_device_and_is_not_collected_by_me_in_any_way_n_nthe_app_does_use_third_party_services_that_may_collect_information_used_to_identify_you_n_nlink_to_the_privacy_policy_of_third_party_service_providers_used_by_the_app_n_ngoogle_play_services_nfacebook_n_nlog_data_ni_want_to_inform_you_that_whenever_you_use_my_service_in_a_case_of_an_error_in_the_app_i_collect_data_and_information_through_third_party_products_on_your_phone_called_log_data_this_log_data_may_include_information_such_as_your_device_internet_protocol_ip_address_device_name_operating_system_version_the_configuration_of_the_app_when_utilizing_my_service_the_time_and_date_of_your_use_of_the_service_and_other_statistics_n_ncookies_ncookies_are_files_with_a_small_amount_of_data_that_are_commonly_used_as_anonymous_unique_identifiers_these_are_sent_to_your_browser_from_the_websites_that_you_visit_and_are_stored_on_your_device_s_internal_memory_n_nthis_service_does_not_use_these_cookies_explicitly_however_the_app_may_use_third_party_code_and_libraries_that_use_cookies_to_collect_information_and_improve_their_services_you_have_the_option_to_either_accept_or_refuse_these_cookies_and_know_when_a_cookie_is_being_sent_to_your_device_if_you_choose_to_refuse_our_cookies_you_may_not_be_able_to_use_some_portions_of_this_service_n_nservice_providers_ni_may_employ_third_party_companies_and_individuals_due_to_the_following_reasons_nto_facilitate_our_service_nto_provide_the_service_on_our_behalf_nto_perform_service_related_services_or_nto_assist_us_in_analyzing_how_our_service_is_used_n_ni_want_to_inform_users_of_this_service_that_these_third_parties_have_access_to_their_personal_information_the_reason_is_to_perform_the_tasks_assigned_to_them_on_our_behalf_however_they_are_obligated_not_to_disclose_or_use_the_information_for_any_other_purpose_n_nsecurity_ni_value_your_trust_in_providing_us_your_personal_information_thus_we_are_striving_to_use_commercially_acceptable_means_of_protecting_it_but_remember_that_no_method_of_transmission_over_the_internet_or_method_of_electronic_storage_is_100_secure_and_reliable_and_i_cannot_guarantee_its_absolute_security_n_nlinks_to_other_sites_nthis_service_may_contain_links_to_other_sites_if_you_click_on_a_third_party_link_you_will_be_directed_to_that_site_note_that_these_external_sites_are_not_operated_by_me_therefore_i_strongly_advise_you_to_review_the_privacy_policy_of_these_websites_i_have_no_control_over_and_assume_no_responsibility_for_the_content_privacy_policies_or_practices_of_any_third_party_sites_or_services_n_nchildren_s_privacy_nthese_services_do_not_address_anyone_under_the_age_of_13_i_do_not_knowingly_collect_personally_identifiable_information_from_children_under_13_years_of_age_in_the_case_i_discover_that_a_child_under_13_has_provided_me_with_personal_information_i_immediately_delete_this_from_our_servers_if_you_are_a_parent_or_guardian_and_you_are_aware_that_your_child_has_provided_us_with_personal_information_please_contact_me_so_that_i_will_be_able_to_do_the_necessary_actions_n_nchanges_to_this_privacy_policy_ni_may_update_our_privacy_policy_from_time_to_time_thus_you_are_advised_to_review_this_page_periodically_for_any_changes_i_will_notify_you_of_any_changes_by_posting_the_new_privacy_policy_on_this_page_n_nthis_policy_is_effective_as_of_2022_10_16_n_ncontact_us_nif_you_have_any_questions_or_suggestions_about_my_privacy_policy_do_not_hesitate_to_contact_me_at_informes_prodan_org_mx_nthis_privacy_policy_page_was_created_at_privacypolicytemplate_net_and_modified_generated_by_app_privacy_policy_generator"><![CDATA[PRODAN > Privacy \n\nPolicy Prodefensa Animal A.C built the PRODAN app as a Free app. This SERVICE is provided by Prodefensa Animal A.C at no cost and is intended for use as is. \n\nThis page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service. \n\nIf you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy. \n\nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions,which are accessible at PRODAN unless otherwise defined in this Privacy Policy. \n\nInformation Collection and Use \n\nFor a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way. \n\nThe app does use third-party services that may collect information used to identify you. \n\nLink to the privacy policy of third-party service providers used by the app \n\nGoogle Play Services \nFacebook \n\nLog Data \nI want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics. \n\nCookies \nCookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory. \n\nThis Service does not use these “cookies” explicitly. However, the app may use third-party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service. \n\nService Providers \nI may employ third-party companies and individuals due to the following reasons: \nTo facilitate our Service; \nTo provide the Service on our behalf; \nTo perform Service-related services; or \nTo assist us in analyzing how our Service is used. \n\nI want to inform users of this Service that these third parties have access to their Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose. \n\nSecurity \nI value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security. \n\nLinks to Other Sites \nThis Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services. \n\nChildren’s Privacy \nThese Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13 years of age. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do the necessary actions. \n\nChanges to This Privacy Policy \nI may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. \n\nThis policy is effective as of 2022-10-16 \n\nContact Us \nIf you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at informes@prodan.org.mx. \nThis privacy policy page was created at privacypolicytemplate.net and modified/generated by App Privacy Policy Generator]]></string>
    <string name="todo">TODO</string>
    <string name="nombre">Nombre</string>
    <string name="raza">raza</string>
    <string name="edad">edad</string>
    <string name="custodia">custodia</string>
    <string name="tama_o">tamaño</string>
    <string name="solicitar">Solicitar</string>
    <string name="raza_">Raza:</string>
    <string name="tama_o_">Tamaño:</string>
    <string name="edad_">Edad:</string>
    <string name="custodia_">Custodia:</string>
</resources>