<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="156dp"
        android:text="@string/contacto"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageButton
        android:id="@+id/btn_youtube"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="33dp"
        android:layout_marginBottom="61dp"
        android:scaleType="centerCrop"
        android:src="@drawable/youtube"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/btntxt_youtube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginBottom="2dp"
        android:clickable="true"
        android:text="@string/youtube"
        android:textColor="#1976D2"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/btn_youtube"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginBottom="334dp"
        android:text="@string/prodanmtytxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_youtube" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="53dp"
        android:text="@string/prodanmty"
        app:layout_constraintBottom_toTopOf="@+id/btntxt_twitter"
        app:layout_constraintStart_toEndOf="@+id/btn_instagram" />

    <ImageButton
        android:id="@+id/btn_correo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="227dp"
        android:scaleType="centerCrop"
        android:src="@drawable/mail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="240dp"
        android:text="informes@prodan.org.mx"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_correo" />

    <TextView
        android:id="@+id/btntxt_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:text="Correo"
        android:textColor="#1976D2"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/btn_correo"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/btntxt_instagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:text="@string/instagram"
        android:textColor="#1976D2"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/btn_instagram"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btn_twitter"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="31dp"
        android:scaleType="centerCrop"
        android:src="@drawable/twitter"
        app:layout_constraintBottom_toTopOf="@+id/btn_correo"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/btntxt_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:text="Twitter"
        android:textColor="#1976D2"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/btn_twitter"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btn_facebook"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="31dp"
        android:scaleType="centerCrop"
        android:src="@drawable/facebook"
        app:layout_constraintBottom_toTopOf="@+id/btn_youtube"
        app:layout_constraintEnd_toStartOf="@+id/btntxt_facebook"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/btntxt_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="39dp"
        android:clickable="true"
        android:text="Facebook"
        android:textColor="#1976D2"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="56dp"
        android:text="ProdanAC"
        app:layout_constraintBottom_toTopOf="@+id/btntxt_youtube"
        app:layout_constraintStart_toEndOf="@+id/btn_facebook" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="55dp"
        android:text="@string/prodanmty"
        app:layout_constraintBottom_toTopOf="@+id/btntxt_correo"
        app:layout_constraintStart_toEndOf="@+id/btn_twitter" />

    <ImageButton
        android:id="@+id/btn_instagram"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="31dp"
        android:scaleType="centerCrop"
        android:src="@drawable/instagram"
        app:layout_constraintBottom_toTopOf="@+id/btn_twitter"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="343dp"
        android:layout_height="106dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:src="@drawable/prodan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>